# rust_rest_api

./: Cargo.toml  README.md
src/: database.rs  handlers.rs  main.rs  models.rs
